@@ -1,3 +1,8 @@
+Fri Feb 13 22:23:34 1998  Theodore Y. Ts'o  <tytso@mit.edu>
+
+	* ftpd.c: Applied lxs's changes to make ftpd safe for systems
+		where sizeof(off_t) > sizeof(int).
+
 Fri Feb 13 15:31:46 1998  Theodore Ts'o  <tytso@rsts-11.mit.edu>
 
 	* Makefile.in (thisconfigdir), configure.in: Point the
